crates/core/tests/ui/token_balance_split_cross_side.stderr
error[E0308]: mismatched types
  --> tests/ui/token_balance_split_cross_side.rs:39:9
   |
26 |     let _order = OrderData::new(
   |                  -------------- arguments to this function are incorrect
...
39 |         sell_source,
   |         ^^^^^^^^^^^ expected `BuyTokenDestination`, found `SellTokenSource`
   |
note: associated function defined here
  --> src/types/order.rs
   |
   |     pub const fn new(
   |                  ^^^

error[E0308]: mismatched types
  --> tests/ui/token_balance_split_cross_side.rs:42:42
   |
42 |     let _mismatch: BuyTokenDestination = sell_source;
   |                    -------------------   ^^^^^^^^^^^ expected `BuyTokenDestination`, found `SellTokenSource`
   |                    |
   |                    expected due to this
